# BEE2BEE

./: .gitignore  DEPLOYMENT.md  Dockerfile  MANUAL_TESTING.md  README.md  pyproject.toml
.github/workflows/: actions.yaml
bee2bee/: p2p_runtime.py
bee2bee.egg-info/: PKG-INFO  requires.txt
connectit/: __main__.py  api.py  config.py  p2p_runtime.py  services.py  utils.py
connectit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
desktop-app/: index.html  package-lock.json  package.json
desktop-app/dist-electron/: main.js  preload.mjs
desktop-app/electron/: main.ts  preload.ts
desktop-app/src/: App.tsx  index.css
examples/: api_demo.py
tauri-app/: .gitignore  README.md  UPDATE_INSTRUCTIONS.md  index.html  package-lock.json  package.json  vite.config.ts
tauri-app/src/: App.tsx  index.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
tests/: commands.sh  test_api.py  test_dht.py  test_hf_optional.py  test_model.py  test_nat_optional.py  test_p2p.py  test_pieces2.py  test_utils.py
