[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bee2bee"
version = "3.3.0"
description = "Decentralized P2P network for AI model hosting and inference"
authors = [{ name = "ConnectIT Team", email = "loaiabdalslam@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["p2p", "ai", "machine-learning", "distributed", "inference", "transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "click>=8.0",
  "typer>=0.12",
  "rich>=13.7",
  "websockets>=12.0",
  "psutil>=5.9",
  "numpy>=1.24",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
hf = [
  "transformers>=4.40",
  "datasets>=2.17",
]
onnx = [
  "onnx>=1.14",
  "onnxruntime>=1.17",
]
torch = [
  "torch>=2.1; platform_system != 'Windows' or platform_machine != 'ARM64'",
]
dht = [
  "kademlia>=2.2.2",
]
nat = [
  "miniupnpc>=2.2.5",
  "aiortc>=1.9.0",
]
test = [
  "pytest",
  "httpx",
]
all = [
  "transformers>=4.40",
  "datasets>=2.17",
  "onnx>=1.14",
  "onnxruntime>=1.17",
  "torch>=2.1; platform_system != 'Windows' or platform_machine != 'ARM64'",
  "kademlia>=2.2.2",
  "miniupnpc>=2.2.5",
  "aiortc>=1.9.0",
]

[project.scripts]
bee2bee = "bee2bee.__main__:cli"

[tool.setuptools]
packages = ["bee2bee"]

[tool.setuptools.package-data]
bee2bee = ["*.json", "*.yaml", "*.yml"]
